--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Countdown.CountdownActivity" />
+        <activity android:name=".countdown.CountdownActivity" />
     </application>
 
 </manifest>
